changed random forest

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,6 @@ ENV/
 /calculated_features/
 .idea/
 code/data_exploration/camboui.ipynb
+/code/data_exploration/.ipynb_checkpoints/
+/code/data_exploration/camboui.ipynb
+/code/data_exploration/data_exploration.ipynb
