more tf-idf features

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ code/data_exploration/camboui.ipynb
 /code/data_exploration/.ipynb_checkpoints/
 /code/data_exploration/camboui.ipynb
 /code/data_exploration/data_exploration.ipynb
+/code/feature_engineering/camboui.ipynb
