--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ code/data_exploration/camboui.ipynb
 /code/data_exploration/camboui.ipynb
 /code/data_exploration/data_exploration.ipynb
 /code/feature_engineering/camboui.ipynb
+/code/models/camboui.ipynb
+/code/feature_engineering/camboui.py
+/code/feature_engineering/camboui_network_x.ipynb
