--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ code/data_exploration/camboui.ipynb
 /code/feature_engineering/camboui_network_x.ipynb
 /tests/multiprocessing_tuto.py
 /data_exploration/data_exploration.ipynb
+/models/feature_selection_2.ipynb
